--- a/src/locales/en/quotation-line-management.json
+++ b/src/locales/en/quotation-line-management.json
@@ -1,6 +1,6 @@
 {
   "title": "Quotation Line Management",
-  "description": "Manage and edit quotation lines",
+  "description": "Description",
   "create": "New Quotation Line",
   "createDescription": "Enter new quotation line information",
   "edit": "Edit Quotation Line",
@@ -23,7 +23,6 @@
   "vatAmount": "VAT Amount",
   "lineTotal": "Line Total (Excl. VAT)",
   "lineGrandTotal": "Line Total (Incl. VAT)",
-  "description": "Description",
   "createdDate": "Created Date",
   "updatedDate": "Updated Date",
   "actions": "Actions",
@@ -97,7 +96,7 @@
   "maxLineTotal": "Max Line Total",
   "minLineGrandTotal": "Min Line Grand Total",
   "maxLineGrandTotal": "Max Line Grand Total",
-  "percentage": "%",
+  "percentage": "Percentage",
   "getByQuotation": "Get by Quotation",
   "allLines": "All Lines",
   "linesForQuotation": "Quotation Lines",
