--- a/src/locales/en/product-pricing-group-by-management.json
+++ b/src/locales/en/product-pricing-group-by-management.json
@@ -49,8 +49,8 @@
   "discount2Range": "Discount 2 must be between 0 and 100",
   "discount3Range": "Discount 3 must be between 0 and 100",
   "enterErpGroupCode": "Enter ERP Product Group Code",
-    "selectErpGroupCode": "Select Group",
-    "selectCurrency": "Please select currency",
+  "selectErpGroupCode": "Select Group",
+  "selectCurrency": "Please select currency",
   "enterListPrice": "Enter List Price",
   "enterCostPrice": "Enter Cost Price",
   "enterDiscount1": "Enter Discount 1 (0-100, Optional)",
@@ -71,10 +71,10 @@
   "maxPrice": "Max Price",
   "minDiscount": "Min Discount",
   "maxDiscount": "Max Discount",
-  "percentage": "%",
+  "percentage": "Percentage",
   "try": "Turkish Lira",
   "usd": "US Dollar",
-  "eur": "Euro",
+  "eur": "EUR",
   "gbp": "British Pound",
   "jpy": "Japanese Yen",
   "calculateFinalPrice": "Calculate Final Price",
