--- a/src/locales/en/product-pricing-management.json
+++ b/src/locales/en/product-pricing-management.json
@@ -68,10 +68,10 @@
   "maxPrice": "Max Price",
   "minDiscount": "Min Discount",
   "maxDiscount": "Max Discount",
-  "percentage": "%",
+  "percentage": "Percentage",
   "try": "Turkish Lira",
   "usd": "US Dollar",
-  "eur": "Euro",
+  "eur": "EUR",
   "gbp": "British Pound",
   "jpy": "Japanese Yen",
   "calculateFinalPrice": "Calculate Final Price",
@@ -85,9 +85,9 @@
   "checkingDuplicate": "Checking...",
   "noDuplicate": "This combination is available",
   "selectStokCode": "Select stock",
-    "selectStok": "Select Stock",
-    "erpGroupCodePlaceholder": "Automatically filled when stock is selected",
-    "profitAmount": "Profit Amount",
+  "selectStok": "Select Stock",
+  "erpGroupCodePlaceholder": "Automatically filled when stock is selected",
+  "profitAmount": "Profit Amount",
   "profitPercentage": "Profit Percentage",
   "searchProductCode": "Search Product Code",
   "searchGroupCode": "Search Group Code",
@@ -114,5 +114,14 @@
   "previous": "Previous",
   "next": "Next",
   "deleteConfirmTitle": "Delete Confirmation",
-  "deleteConfirmMessage": "Are you sure you want to delete this record? This action cannot be undone."
+  "deleteConfirmMessage": "Are you sure you want to delete this record? This action cannot be undone.",
+  "productInfo": "PRODUCT INFO",
+  "category": "CATEGORY",
+  "searchPlaceholder": "Search product name, SKU or category...",
+  "filter": {
+    "all": "All",
+    "active": "Active",
+    "critical": "Critical Stock",
+    "archive": "Archive"
+  }
 }
