--- a/src/locales/fr/product-pricing-group-by-management.json
+++ b/src/locales/fr/product-pricing-group-by-management.json
@@ -49,8 +49,8 @@
   "discount2Range": "La remise 2 doit être entre 0 et 100",
   "discount3Range": "La remise 3 doit être entre 0 et 100",
   "enterErpGroupCode": "Entrer Code Groupe Produit ERP",
-    "selectErpGroupCode": "Sélectionner un groupe",
-    "selectCurrency": "Veuillez sélectionner la devise",
+  "selectErpGroupCode": "Sélectionner un groupe",
+  "selectCurrency": "Veuillez sélectionner la devise",
   "enterListPrice": "Entrer Prix Catalogue",
   "enterCostPrice": "Entrer Prix de Revient",
   "enterDiscount1": "Entrer Remise 1 (0-100, Optionnel)",
@@ -71,10 +71,10 @@
   "maxPrice": "Prix Maximum",
   "minDiscount": "Remise Minimum",
   "maxDiscount": "Remise Maximum",
-  "percentage": "%",
+  "percentage": "Pourcentage",
   "try": "Lire Turque",
   "usd": "Dollar Américain",
-  "eur": "Euro",
+  "eur": "EUR",
   "gbp": "Livre Sterling",
   "jpy": "Yen Japonais",
   "calculateFinalPrice": "Calculer Prix Final",
