--- a/src/locales/fr/product-pricing-management.json
+++ b/src/locales/fr/product-pricing-management.json
@@ -7,7 +7,7 @@
   "editDescription": "Modifier les informations de tarification",
   "delete": "Supprimer",
   "deleteTitle": "Supprimer Tarification",
-  "productInfo": "INFO PRODUIT",
+  "productInfo": "INFOS PRODUIT",
   "category": "CATÉGORIE",
   "stockStatus": "ÉTAT DU STOCK",
   "noStockTracking": "Pas de Suivi de Stock",
@@ -16,8 +16,8 @@
   "filter": {
     "all": "Tous",
     "active": "Actif",
-    "critical": "Stock Critique",
-    "archive": "Archives"
+    "critical": "Stock critique",
+    "archive": "Archive"
   },
   "erpProductCode": "Code Produit ERP",
   "erpGroupCode": "Code Groupe Produit ERP",
@@ -80,10 +80,10 @@
   "maxPrice": "Prix Maximum",
   "minDiscount": "Remise Minimum",
   "maxDiscount": "Remise Maximum",
-  "percentage": "%",
+  "percentage": "Pourcentage",
   "try": "Lire Turque",
   "usd": "Dollar Américain",
-  "eur": "Euro",
+  "eur": "EUR",
   "gbp": "Livre Sterling",
   "jpy": "Yen Japonais",
   "calculateFinalPrice": "Calculer Prix Final",
@@ -97,9 +97,9 @@
   "checkingDuplicate": "Vérification en cours...",
   "noDuplicate": "Cette combinaison est disponible",
   "selectStokCode": "Sélectionner le stock",
-    "selectStok": "Sélectionner Stock",
-    "erpGroupCodePlaceholder": "Rempli automatiquement lorsque le stock est sélectionné",
-    "profitAmount": "Montant du Profit",
+  "selectStok": "Sélectionner Stock",
+  "erpGroupCodePlaceholder": "Rempli automatiquement lorsque le stock est sélectionné",
+  "profitAmount": "Montant du Profit",
   "profitPercentage": "Pourcentage de Profit",
   "searchProductCode": "Rechercher Code Produit",
   "searchGroupCode": "Rechercher Code Groupe",
