--- a/src/locales/fr/quotation-line-management.json
+++ b/src/locales/fr/quotation-line-management.json
@@ -1,6 +1,6 @@
 {
   "title": "Gestion des Lignes de Devis",
-  "description": "Gérer et modifier les lignes de devis",
+  "description": "Description",
   "create": "Nouvelle Ligne de Devis",
   "createDescription": "Entrez les informations de la nouvelle ligne de devis",
   "edit": "Modifier Ligne de Devis",
@@ -23,7 +23,6 @@
   "vatAmount": "Montant TVA",
   "lineTotal": "Total Ligne (HT)",
   "lineGrandTotal": "Total Ligne (TTC)",
-  "description": "Description",
   "createdDate": "Date de Création",
   "updatedDate": "Date de Mise à Jour",
   "actions": "Actions",
@@ -97,7 +96,7 @@
   "maxLineTotal": "Total Ligne Max",
   "minLineGrandTotal": "Total TTC Min",
   "maxLineGrandTotal": "Total TTC Max",
-  "percentage": "%",
+  "percentage": "Pourcentage",
   "getByQuotation": "Obtenir par Devis",
   "allLines": "Toutes les Lignes",
   "linesForQuotation": "Lignes de Devis",
