--- a/src/locales/fr/product-select-dialog.json
+++ b/src/locales/fr/product-select-dialog.json
@@ -5,5 +5,6 @@
   "noProducts": "Aucun produit trouvé",
   "noResults": "Aucun résultat de recherche trouvé",
   "searchPlaceholder": "Rechercher par code produit ou nom...",
-  "voiceSearch": "Recherche vocale"
+  "voiceSearch": "Recherche vocale",
+  "loading": "Chargement"
 }
